@startuml DoctoLight
!theme plain

entity "User" as user {
  | Type       | Nom        | PK/FK | Null |
  | BIGINT       | id         | PK    | NOT NULL |
  | VARCHAR(100) | nom     |       | NOT NULL |
  | VARCHAR(255) | prenom   |       | NOT NULL |
  | VARCHAR(150) | email    |       | NOT NULL |
  | VARCHAR(255) | password |       | NOT NULL |
  | BOOLEAN      | is_active   |       | NOT NULL |
  | DATETIME     | created_at   |       | NOT NULL |
}

entity "Role" as role {
  | Type       | Nom    | PK/FK | Null |
  | BIGINT     | id     | PK    | NOT NULL |
  | VARCHAR(50)| nom    |       | NOT NULL |
}

entity "UserRole" as userrole {
  | Type   | Nom      | PK/FK | Null |
  | BIGINT | user_id  | PK/FK    | NOT NULL |
  | BIGINT | role_id  | PK/FK    | NOT NULL |
}

entity "Service" as service {
  | Type        | Nom        | PK/FK | Null |
  | BIGINT      | id         | PK    | NOT NULL |
  | VARCHAR(100)| nom       |       | NOT NULL |
  | TEXT        | description|       | NULL |.
  | INT(11)     | duree     |       | NOT NULL |
  | VARCHAR(255)| image     |       | NOT NULL |
  | BOOLEAN     | is_active   |       | NOT NULL |
}

entity "DisponibiliteStaff" as dispostaff {
  | Type     | Nom           | PK/FK | Null |
  | BIGINT   | id            | PK    | NOT NULL |
  | BIGINT   | user_id       | FK    | NOT NULL |
  | ENUM('LUNDI','MARDI','MERCREDI','JEUDI','VENDREDI','SAMEDI','DIMANCHE') | jour_semaine |       | NOT NULL |
  | DATETIME | start_time|       | NOT NULL |
  | DATETIME | end_time  |       | NOT NULL |
}

entity "DisponibiliteService" as disposervice {
  | Type     | Nom           | PK/FK | Null |
  | BIGINT   | id            | PK    | NOT NULL |
  | BIGINT   | service_id    | FK    | NOT NULL |
  | ENUM('LUNDI','MARDI','MERCREDI','JEUDI','VENDREDI','SAMEDI','DIMANCHE') | jour_semaine |       | NOT NULL |
  | DATETIME | start_time|       | NOT NULL |
  | DATETIME | end_time  |       | NOT NULL |
}

entity "RDV" as rdv {
  | Type     | Nom          | PK/FK | Null |
  | BIGINT   | id           | PK    | NOT NULL |
  | BIGINT   | patient_id   | FK    | NOT NULL |
  | BIGINT   | staff_id     | FK    | NOT NULL |
  | BIGINT   | service_id   | FK    | NOT NULL |
  | BIGINT   | dispo_staff_id | FK  | NULL     |
  | BIGINT   | dispo_service_id | FK | NULL    |
  | DATETIME | date_rdv     | FK    | NOT NULL |
  | DATETIME | heure_debut  |       | NOT NULL |
  | DATETIME | heure_fin    |       | NOT NULL |
  | ENUM('PROGRAMME','ANNULE','TERMINE')| statut |    | NOT NULL |
}

entity "News" as news {
  | Type        | Nom     | PK/FK | Null |
  | BIGINT      | id      | PK    | NOT NULL |
  | VARCHAR(150)| title   |       | NOT NULL |
  | TEXT        | contenu |       | NOT NULL |
  | DATETIME    | created_at|     | NOT NULL |
  | BIGINT      | created_by|     | NOT NULL |
  | VARCHAR(255)| image   |       | NULL     |
}

entity "AuditLog" as auditlog {
  | Type     | Nom        | PK/FK | Null |
  | BIGINT   | id         | PK    | NOT NULL |
  | VARCHAR(100) | table_name  | FK | NOT NULL |
  | BIGINT   | entity_id  |       | NOT NULL |
  | BIGINT   | user_id    |       | NOT NULL |
  | ENUM('INSERT','UPDATE','DELETE') | action  |   | NOT NULL |
  | TEXT     | description|       | NULL |
  | VARCHAR(45) | ip_address |    | NULL |
  | DATETIME | action_date |       | NOT NULL |
}

' =====================
' Relations + actions
' =====================
user ||--o{ rdv : staff / patient
note on link
  crée / modifie / annule / consulte
end note

user ||--o{ dispostaff
note on link
  définit / ajoute
end note

user ||--o{ userrole
note on link
  s’attribue / révoque rôle
end note

user ||--o{ news
note on link
  publie / gère
end note

user ||--o{ auditlog
note on link
  historise
end note

service ||--o{ rdv
note on link
  concerne
end note

service ||--o{ disposervice
note on link
  définit créneaux
end note

service ||--o{ auditlog
note on link
  historise
end note

news ||--o{ auditlog
note on link
  historise
end note

auditlog ||--|| user
note on link
  action faite par
end note

role ||--o{ userrole
note on link
  attribue
end note

rdv ||--o{ auditlog
note on link
  historise
end note

dispostaff ||--o{ auditlog
note on link
  historise
end note

disposervice ||--o{ auditlog
note on link
  historise
end note
@enduml
